--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               </li>
           
             </ul>
-           
+            <button @click="acceptOrder(selectedOrder.code)">Aceitar Pedido</button>
             <button @click="closeOrderDetails">Fechar</button>
           </div>
         </div>
